# quickbin

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yml
notebooks/: benchmark.ipynb
quickbin/: __init__.py  _binning_handlers.py  _quickbin_core.c  _quickbin_core.h  _quickbin_core.pyi  api_helpers.h  base.py  binning.c  binning.h  definitions.py  iterators.c  iterators.h  opmask.h  quickbin_core.c
quickbin/benchmarks/: benchmark.py  memlogger.py
quickbin/src/: quickbin_core.c
quickbin/tests/: quickbin_test_utils.c  refalarm.py  test_errors.py  test_outputs.py  test_reference_leaks.py
