[project]
name        = "quickbin"
version     = "0.1.0a0"

requires-python = ">=3.11"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
tests = ["pytest"]
benchmark = ["psutil", "scipy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quickbin*"]
# packages = ["quickbin"]
